--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,5 +1,6 @@
 body{
     background: rgb(225, 195, 246);
+    
 }
 
 .nav{ 
@@ -16,5 +17,29 @@ h1{
     color:rgb(244, 119, 173);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
+    text-align: center;
+    padding: 15px;
+    font-size: 80px;
     
+}
+img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+    margin-bottom: 20px;
+}
+
+p, ul{
+    list-style:none;
+    text-align: center;
+    color: navy;
+    font-size: 30px;
+}
+.btn{
+    color: hotpink;
+    font-size: 30px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
